# wor_matrix

./: .gitignore  CMakeLists.txt  README.md  license.txt
src/: ArrayOperators.hpp  Main.cpp  Matrix.hpp  Matrix.inc
test/: Main_test.cpp  Matrix_test.cpp
